--- a/telthcare.css
+++ b/telthcare.css
@@ -1,280 +1,311 @@
-.sidebar-header {
-    display: flex;
-    align-items: center;
-    margin-bottom: 50px;
-}
+   .sidebar-header {
+       display: flex;
+       align-items: center;
+       margin-bottom: 50px;
+   }
 
-.sidebar-header .logo {
-    width: 40px;
-    height: 40px;
-    background: #623193;
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-weight: bold;
-    margin-right: 10px;
-}
+   .sidebar-header .logo {
+       width: 40px;
+       height: 40px;
+       background: #623193;
+       border-radius: 8px;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       color: white;
+       font-weight: bold;
+       margin-right: 10px;
+   }
 
-.sidebar-header .title {
-    font-size: 20px;
-    font-weight: 600;
-    transition: opacity 0.3s;
-}
+   .sidebar-header .title {
+       font-size: 20px;
+       font-weight: 600;
+       transition: opacity 0.3s;
+   }
 
-.sidebar.collapsed .title {
-    display: none;
-}
+   .sidebar.collapsed .title {
+       display: none;
+   }
 
+   .nav-link {
+       display: flex;
+       align-items: center;
+       padding: 12px 15px;
+       color: black;
+       border-radius: 8px;
+       margin-bottom: 15px;
+       transition: all 0.3s;
+       position: relative;
+       gap: 6px;
+   }
 
-.nav-link {
-    display: flex;
-    align-items: center;
-    padding: 12px 15px;
-    color: black;
-    border-radius: 8px;
-    margin-bottom: 15px;
-    transition: all 0.3s;
-    position: relative;
-    gap: 6px;
-}
+   .nav-link:hover {
+       background-color: #623193;
+       color: white;
+   }
 
+   .nav-link.active {
+       background-color: #623193;
+       color: white;
+   }
 
-.nav-link:hover {
-    background-color: #623193;
-    color: white;
-}
+   .nav-link i {
+       font-size: 20px;
+       min-width: 20px;
+   }
 
-.nav-link.active {
-    background-color: #623193;
-    color: white;
-}
+   .nav-link span {
+       transition: opacity 0.3s;
+   }
 
-.nav-link i {
-    font-size: 20px;
-    min-width: 20px;
-}
+   .sidebar.collapsed .nav-link span,
+   .sidebar.collapsed .nav-link:hover::after {
+       display: none;
+   }
 
-.nav-link span {
-    transition: opacity 0.3s;
-}
+   .sidebar.collapsed .nav-link:hover::before {
+       content: attr(data-title);
+       position: absolute;
+       left: 100%;
+       top: 50%;
+       transform: translateY(-50%);
+       background-color: #623193;
+       color: white;
+       padding: 5px 10px;
+       border-radius: 8px;
+       white-space: nowrap;
+       box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+       z-index: 1000;
+   }
 
-.sidebar.collapsed .nav-link span,
-.sidebar.collapsed .nav-link:hover::after {
-    display: none;
-}
+   .bi-list-task {
+       color: #623193;
+       border: none;
+       border-radius: 8px;
+       padding: 10px 20px;
+       cursor: pointer;
+       margin-bottom: 20px;
+       font-size: 30px;
+   }
 
-.sidebar.collapsed .nav-link:hover::before {
-    content: attr(data-title);
-    position: absolute;
-    left: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: #623193;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 8px;
-    white-space: nowrap;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-}
+   @media (max-width: 1000px) {
+       .listIcon {
+           display: none;
+       }
 
-.bi-list-task {
-    color: #623193;
-    border: none;
-    border-radius: 8px;
-    padding: 10px 20px;
-    cursor: pointer;
-    margin-bottom: 20px;
-    font-size: 30px;
-}
+       .sidebar {
+           width: 80px;
+       }
 
-@media (max-width: 1000px) {
-    .listIcon {
-        display: none;
+       .title {
+           display: none;
+       }
+
+       .nav-link span {
+           display: none;
+       }
+
+       .sidebar .sidebar-footer {
+           display: none;
+       }
+
+       .nav-link:hover::before {
+           content: attr(data-title);
+           position: absolute;
+           left: 100%;
+           top: 50%;
+           transform: translateY(-50%);
+           background-color: #623193;
+           color: white;
+           padding: 5px 10px;
+           border-radius: 8px;
+           white-space: nowrap;
+           box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+           z-index: 1000;
+       }
+   }
+
+   @media (hover: none) {
+       .nav-link:active::before {
+           content: attr(data-title);
+           position: absolute;
+           left: 100%;
+           top: 50%;
+           transform: translateY(-50%);
+           background-color: #623193;
+           color: white;
+           padding: 5px 10px;
+           border-radius: 8px;
+           white-space: nowrap;
+           box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+           z-index: 1000;
+       }
+   }
+
+   .content-area {
+       margin-top: 80px;
+       background: white;
+       border-radius: 8px;
+       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+       padding: 20px;
+   }
+
+   .page-header {
+       display: flex;
+       gap: 15px;
+       flex-direction: column;
+       margin-bottom: 20px;
+       padding-bottom: 10px;
+       border-bottom: 1px solid #eee;
+   }
+
+   .list-count {
+       cursor: pointer;
+   }
+
+   @media (max-width: 475px){
+    .content-area{
+        padding: 0px;
     }
+   }
 
-    .sidebar {
-        width: 80px;
-    }
+   @media (max-width: 1000px) {
+       .main-content {
+           margin-left: 80px;
+       }
 
-    .title {
-        display: none;
-    }
+       .top-nav {
+           left: 80px;
+       }
+   }
 
-    .nav-link span {
-        display: none;
-    }
+   @media (max-width: 550px) {
+       .top-nav .nav-links a {
+           font-size: 10px;
+       }
 
-    .nav-link:hover::before {
-        content: attr(data-title);
-        position: absolute;
-        left: 100%;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: #623193;
-        color: white;
-        padding: 5px 10px;
-        border-radius: 8px;
-        white-space: nowrap;
-        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
-        z-index: 1000;
-    }
-}
+       .coupon-card .coupon-info h5 {
+           font-size: 12px;
+       }
 
-@media (hover: none) {
-    .nav-link:active::before {
-        content: attr(data-title);
-        position: absolute;
-        left: 100%;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: #623193;
-        color: white;
-        padding: 5px 10px;
-        border-radius: 8px;
-        white-space: nowrap;
-        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
-        z-index: 1000;
-    }
-}
+       .coupon-card .coupon-info div {
+           font-size: 10px;
+       }
+   }
 
-.content-area {
-    margin-top: 80px;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-    padding: 20px;
-}
+   @media (max-width: 400px) {
+       .top-nav .nav-links a {
+           font-size: 8px;
+       }
+   }
 
-.page-header {
-    display: flex;
-    gap: 15px;
-    flex-direction: column;
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #eee;
-}
+   .table {
+       margin-bottom: 0;
+   }
 
-.list-count {
-    cursor: pointer;
-}
+   .table th {
+       font-weight: 500;
+       color: #666;
+       border-bottom-width: 1px;
+   }
 
-@media (max-width: 1000px) {
-    .main-content {
-        margin-left: 80px;
-    }
+   .status-paid {
+       color: #22c55e;
+   }
 
-    .top-nav {
-        left: 80px;
-    }
-}
+   .status-pending {
+       color: #f59e0b;
+   }
 
-@media (max-width: 550px) {
-    .top-nav .nav-links a {
-        font-size: 10px;
-    }
+   .table-responsive table tbody tr td {
+       padding-top: 25px;
+   }
 
-    .coupon-card .coupon-info h5 {
-        font-size: 12px;
-    }
+   .table-responsive table thead tr th {
+       padding-bottom: 15px;
+   }
 
-    .coupon-card .coupon-info div {
-        font-size: 10px;
-    }
-}
+   @media (max-width: 600px) {
+       .table-responsive {
+           overflow-x: auto;
+       }
 
-@media (max-width: 400px) {
-    .top-nav .nav-links a {
-        font-size: 8px;
-    }
-}
+       .table-responsive {
+           font-size: 12px;
+       }
+   }
 
+   .sidebar {
+       width: 18%;
+       height: 100vh;
+       position: fixed;
+       left: 0;
+       top: 0;
+       padding: 20px;
+       background: white;
+       transition: all 0.3s ease;
+       box-shadow: 5px 15px 15px rgba(0, 0, 0, 0.1);
+   }
 
-.table {
-    margin-bottom: 0;
-}
+   .sidebar.collapsed {
+       width: 80px;
+   }
 
-.table th {
-    font-weight: 500;
-    color: #666;
-    border-bottom-width: 1px;
-}
+   .main-content {
+       flex-grow: 1;
+       margin-left: 18%;
+       padding: 20px;
+       background-color: #f8f9fa;
+       min-height: 100vh;
+       transition: margin-left 0.3s ease;
+   }
 
-.status-paid {
-    color: #22c55e;
-}
+   .sidebar.collapsed+.main-content {
+       margin-left: 80px;
+   }
 
-.status-pending {
-    color: #f59e0b;
-}
+   @media (max-width: 1000px) {
+       .sidebar {
+           width: 80px;
+       }
 
-.table-responsive table tbody tr td {
-    padding-top: 25px;
-}
+       .main-content {
+           margin-left: 80px;
+       }
 
-.table-responsive table thead tr th {
-    padding-bottom: 15px;
-}
+       .sidebar.collapsed+.main-content {
+           margin-left: 80px;
+       }
+   }
 
-@media (max-width: 600px) {
-    .table-responsive {
-        overflow-x: auto;
-    }
+   html.sidebar-collapsed .sidebar {
+       width: 80px;
+   }
 
-    .table-responsive {
-        font-size: 12px;
-    }
-}
+   html.sidebar-collapsed .main-content {
+       margin-left: 80px;
+   }
 
-.sidebar {
-    width: 18%;
-    height: 100vh;
-    position: fixed;
-    left: 0;
-    top: 0;
-    padding: 20px;
-    background: white;
-    transition: all 0.3s ease;
-    box-shadow: 5px 15px 15px rgba(0, 0, 0, 0.1);
-}
+   .sidebar-footer {
+       position: absolute;
+       bottom: 20px;
+       left: 0;
+       right: 0;
+       display: flex;
+       justify-content: center;
+   }
 
-.sidebar.collapsed {
-    width: 80px;
-}
+   .toggle-icon {
+       color: #623193;
+       font-size: 24px;
+       cursor: pointer;
+   }
 
-.main-content {
-    flex-grow: 1;
-    margin-left: 18%;
-    padding: 20px;
-    background-color: #f8f9fa;
-    min-height: 100vh;
-    transition: margin-left 0.3s ease;
-}
+   .sidebar:not(.collapsed) .bi-chevron-right,
+   .sidebar.collapsed .bi-chevron-left {
+       display: none;
+   }
 
-.sidebar.collapsed+.main-content {
-    margin-left: 80px;
-}
-
-@media (max-width: 1000px) {
-    .sidebar {
-        width: 80px;
-    }
-
-    .main-content {
-        margin-left: 80px;
-    }
-
-    .sidebar.collapsed+.main-content {
-        margin-left: 80px;
-    }
-}
-
-html.sidebar-collapsed .sidebar {
-    width: 80px;
-}
-
-html.sidebar-collapsed .main-content {
-    margin-left: 80px;
-}
+   .sidebar.collapsed .bi-chevron-right {
+       display: block;
+   }
